*** Changelog ***

= 1.5.4 - 2018-xx-xx =
* Fix - When returning from PayPal, place order buttons says "proceed to payment".
* Fix - Impossible to open API credentials after saving Settings.
* Fix - Duplicate checkout settings when PP Credit option is enabled.

= 1.5.3 - 2018-03-28 =
* Fix - wp_enqueue_media was not correctly loaded causing weird behavior with other parts of system wanting to use it.
* Fix - Typo in activation hook.

= 1.5.2 - 2018-02-20 =
* Tweak - Express checkout shouldn't display "Review your order before the payment".
* Fix - Compatibility with Subscriptions and Checkout from Single Product page.
* Fix - Make sure session object exists before use to prevent fatal error.

= 1.5.1 =
* Add   - Hooks for Settings.
* Fix   - Missing Settings link on Plugins page.
* Fix   - Use correct image URL for PayPal image logo.
* Tweak - Default to signature method if certificate missing, rather than other way around.

= 1.5.0 =
* Add   - PayPal credit is now available on checkout.
* Fix   - WC 3.3 compatibility.
* Add   - Ability to select existing / upload new image(s) for logo / header fields.
* Fix   - Shipping address overridden when PayPal returns billing address.

= 1.4.7 =
* Fix   - Issue with missing PayPal session information.
* Fix   - Dependency error when using LibreSSL.
* Fix   - Additional compatibility with shipping plugins
* Fix   - Issue where deprecated `WC_Cart::get_cart_url` is being used.
* Tweak - Makes admin notification dismissible.

= 1.4.6 =
* Fix   - Coupon related PayPal error 10413.

= 1.4.5 =
* Fix   - Title/Description fields in the settings should appear based on Enable PayPal Express Checkout.
* Add   - Invoice Prefix now has the ability to be empty.
* Fix   - Additional compatibility fixes for line items.
* Fix   - PHP notice for Subscription id.

= 1.4.4 =
* Fix   - PayPal error (10431).
* Fix   - PHP notices.

= 1.4.3 =
* Fix   - Refunds not working on authorize then captured transactions.