@@ -26,7 +26,6 @@ class WC_Gateway_PPEC_Cart_Handler {
 
 		if ( 'yes' === wc_gateway_ppec()->settings->checkout_on_single_product_enabled ) {
 			add_action( 'woocommerce_after_add_to_cart_form', array( $this, 'display_paypal_button_product' ), 1 );
-			add_action( 'wc_ajax_wc_ppec_generate_cart', array( $this, 'wc_ajax_generate_cart' ) );
 		}
 
 		add_action( 'wc_ajax_wc_ppec_update_shipping_costs', array( $this, 'wc_ajax_update_shipping_costs' ) );
@@ -42,58 +41,6 @@ class WC_Gateway_PPEC_Cart_Handler {
 			$_GET['startcheckout'] = 'false';
 			woo_pp_start_checkout();
 		}
-	}
-
-	/**
-	 * Generates the cart for express checkout on a product level.
-	 *
-	 * @since 1.4.0
-	 */
-	public function wc_ajax_generate_cart() {
-		global $post;
-
-		if ( ! wp_verify_nonce( $_POST['nonce'], '_wc_ppec_generate_cart_nonce' ) ) {
-			wp_die( __( 'Cheatin&#8217; huh?', 'woocommerce-gateway-paypal-express-checkout' ) );
-		}
-
-		if ( ! defined( 'WOOCOMMERCE_CART' ) ) {
-			define( 'WOOCOMMERCE_CART', true );
-		}
-
-		WC()->shipping->reset_shipping();
-		$product = wc_get_product( $post->ID );
-
-		if ( ! empty( $_POST['add-to-cart'] ) ) {
-			$product = wc_get_product( absint( $_POST['add-to-cart'] ) );
-		}
-
-		/**
-		 * If this page is single product page, we need to simulate
-		 * adding the product to the cart taken account if it is a
-		 * simple or variable product.
-		 */
-		if ( $product ) {
-			$qty     = ! isset( $_POST['qty'] ) ? 1 : absint( $_POST['qty'] );
-
-			if ( $product->is_type( 'variable' ) ) {
-				$attributes = array_map( 'wc_clean', $_POST['attributes'] );
-
-				if ( version_compare( WC_VERSION, '3.0', '<' ) ) {
-					$variation_id = $product->get_matching_variation( $attributes );
-				} else {
-					$data_store = WC_Data_Store::load( 'product' );
-					$variation_id = $data_store->find_matching_product_variation( $product, $attributes );
-				}
-
-				WC()->cart->add_to_cart( $product->get_id(), $qty, $variation_id, $attributes );
-			} else {
-				WC()->cart->add_to_cart( $product->get_id(), $qty );
-			}
-
-			WC()->cart->calculate_totals();
-		}
-
-		wp_send_json( new stdClass() );
 	}
 
 	/**
@@ -220,16 +167,6 @@ class WC_Gateway_PPEC_Cart_Handler {
 					'show_modal'  => apply_filters( 'woocommerce_paypal_express_checkout_show_cart_modal', true ),
 					'update_shipping_costs_nonce' => wp_create_nonce( '_wc_ppec_update_shipping_costs_nonce' ),
 					'ajaxurl'     => WC_AJAX::get_endpoint( 'wc_ppec_update_shipping_costs' ),
-				)
-			);
-		}
-
-		if ( is_product() ) {
-			wp_enqueue_script( 'wc-gateway-ppec-generate-cart', wc_gateway_ppec()->plugin_url . 'assets/js/wc-gateway-ppec-generate-cart.js', array( 'jquery' ), wc_gateway_ppec()->version, true );
-			wp_localize_script( 'wc-gateway-ppec-generate-cart', 'wc_ppec_context',
-				array(
-					'generate_cart_nonce' => wp_create_nonce( '_wc_ppec_generate_cart_nonce' ),
-					'ajaxurl'             => WC_AJAX::get_endpoint( 'wc_ppec_generate_cart' ),
 				)
 			);
 		}
