@@ -4,6 +4,7 @@
 * Fix - When returning from PayPal, place order buttons says "proceed to payment".
 * Fix - Impossible to open API credentials after saving Settings.
 * Fix - Duplicate checkout settings when PP Credit option is enabled.
+* Fix - Single Product checkout: Quantity being duplicated due to multiple AJAX calls.
 
 = 1.5.3 - 2018-03-28 =
 * Fix - wp_enqueue_media was not correctly loaded causing weird behavior with other parts of system wanting to use it.
